scaling/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Egress
    - Ingress
  ingress: []
  egress: []
